--- a/Pipfile
+++ b/Pipfile
@@ -3,16 +3,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[[source]]
-url = "https://pypi.org/project"
-verify_ssl = false
-name = "pypi2"
-
 [packages]
-pymonad = "*"
-ast-drawer-ses = "0.0.2"
+pymonad="*"
+ast-drawer-ses="0.0.4"
+networkx="*"
+pydot="*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
